<resources>
    <string name="app_name">My Pesa</string>
    <string name="action_settings">Settings</string>
    <string name="main_activity_title">Crypto Market + News Feed</string>
    <string name="action_all_currencies">Coins</string>
    <string name="action_all_currencies_condensed">coins</string>
    <string name="cPrice">PriceHolder</string>
    <string name="cTitle">TitleHolder</string>
    <string name="cId">cIdHolder</string>
    <string name="MainActivityClassName">MainActivity</string>
    <string name="AvailableCryptosActivityClassName">AvailableCryptosActivity</string>
    <string name="dayChange">0%</string>
    <string name="cFollowButton">follow</string>
    <string name="cTotalCap">Total Market Cap : </string>
    <string name="cMoreButton">See More</string>
    <string name="CoinListAdapterCassName">CoinListAdapter</string>
    <string name="CoinHistoryActivityClassName">CoinHistoryActivity</string>
    <string name="stopFollowing">Stop Following</string>
    <string name="startFollowing">Follow</string>
    <string name="action_refresh_coins">Refresh Coins</string>
    <string name="cGraphMaxTitle">Max</string>
    <string name="cGraphDayTitle">Last Day</string>
    <string name="cGraphWeekTitle">Last Week</string>
    <string name="cGraphMonthTitle">Last Month</string>
    <string name="cGraphQuarterTitle">Last Quarter</string>
    <string name="cGraphYearTitle">Last Year</string>
    <string name="nTitle">News Item Title</string>
    <string name="coinFilterHint">Coin Name</string>
    <string name="nDescription">News Item Description</string>
    <string name="nSourceName">News Item source Name</string>
    <string name="action_refresh_news">Refresh News</string>
    <string name="action_change_currency">Change Currency</string>
    <string name="countryPreference">selectedCountry</string>
    <string name="sharedPreferencesFile">com.ecmdapps.mypesa.prefs</string>
</resources>
