<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ecmdapps.mypesa.MainActivity">
    <item
        android:id="@+id/action_all_currencies"
        android:orderInCategory="30"
        app:showAsAction="ifRoom"
        android:title="@string/action_all_currencies" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="98"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh_coins"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_refresh_coins" />

    <item
        android:id="@+id/action_refresh_news"
        android:orderInCategory="99"
        app:showAsAction="never"
        android:title="@string/action_refresh_news" />

</menu>
