<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp">


    <TextView
        android:id="@+id/nSourceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:text="@string/nSourceName"
        android:textColor="#210938"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/nTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/nTitle"
        android:textColor="#000"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/nDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:maxLines="3"
        android:textColor="#a9a9a9"
        android:text="@string/nDescription"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"/>
</LinearLayout>