<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ecmdapps.mypesa.CoinHistoryActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/cMore">
        <ProgressBar
            android:id="@+id/cProgress"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:visibility="gone" />

        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:id="@+id/cGraphDay"
            android:visibility="gone" />
        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:id="@+id/cGraphWeek"
            android:visibility="gone" />
        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:id="@+id/cGraphMonth"
            android:visibility="gone" />
        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:id="@+id/cGraphQuarter"
            android:visibility="gone" />
        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:id="@+id/cGraphYear"
            android:visibility="gone" />
        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:id="@+id/cGraphMax"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/graphTitles"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cGraphDayTitle"
                android:text="@string/cGraphDayTitle"
                android:visibility="gone"
                android:textSize="16sp"
                android:padding="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:background="@drawable/back"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cGraphWeekTitle"
                android:text="@string/cGraphWeekTitle"
                android:visibility="gone"
                android:textSize="16sp"
                android:padding="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:background="@drawable/back"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cGraphMonthTitle"
                android:text="@string/cGraphMonthTitle"
                android:visibility="gone"
                android:textSize="16sp"
                android:padding="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:background="@drawable/back"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cGraphQuarterTitle"
                android:text="@string/cGraphQuarterTitle"
                android:visibility="gone"
                android:textSize="16sp"
                android:padding="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:background="@drawable/back"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cGraphYearTitle"
                android:text="@string/cGraphYearTitle"
                android:visibility="gone"
                android:textSize="16sp"
                android:padding="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:background="@drawable/back"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cGraphMaxTitle"
                android:text="@string/cGraphMaxTitle"
                android:visibility="gone"
                android:textSize="16sp"
                android:padding="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:background="@drawable/back" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cTotalCapLabel"
                android:text="@string/cTotalCap"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cTotalCap"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
